# agent-terminal-ui

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  gap_analysis_plan.md  pyproject.toml
.github/workflows/: pipeline.yml
agent_terminal_ui/: __init__.py  app.py  client.py  commands.py  terminal_ui.py
agent_terminal_ui/tui/: __init__.py  agent_timer.py  css.py  exit_confirm_screen.py  formatters.py  history_screen.py  input_text_area.py  logo.txt  mcp_screen.py  status_line.py  theme.py  tool_approval_screen.py
agent_terminal_ui/tui/tool_display/: __init__.py  _formatters.py  _registry.py  _widget.py
agent_terminal_ui/widgets/: workflow.py
scripts/: img2ansi.py  inject_logo.py  verify_tui_acp.py
tests/: test_basic.py  test_client.py  test_commands.py  test_enhanced_features.py  test_tui.py  text_universal_skills.py
