[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-terminal-ui"
version = "0.1.35"
description = "Terminal UI for Agentic AI!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.31",
    "textual>=1.0.0",
    "rich>=13.0.0",
    "agent-client-protocol>=0.9.0"
]

[project.scripts]
agent-tui = "agent_terminal_ui.terminal_ui:terminal_ui"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
agent_terminal_ui = ["py.typed"]
